--- a/techolution-ingress.yaml
+++ b/techolution-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
    #kubernetes.io/ingress.class: "gce"
     nginx.ingress.kubernetes.io/rewrite-target: /
     #kubernetes.io/ingress.class: "nginx"
-    #kubernetes.io/ingress.global-static-ip-name: 
+    kubernetes.io/ingress.global-static-ip-name: test-ip
     #ingress.gcp.kubernetes.io/pre-shared-cert: 
 spec:
   rules:
